# breadnotes

./: .env.example  .gitignore  DOCKER_README.md  Makefile  Plan  README.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 351adc2b1c91_initial_migration.py
api/app/core/: auth.py  config.py  database.py  logging.py
api/app/models/: __init__.py  bread_entry.py  user.py
api/app/routers/: auth.py  bread_entries.py
api/app/schemas/: __init__.py  bread_entry.py  user.py
api/app/services/: s3_service.py
scripts/: breadnotes.service  deploy.sh  init-db.sql
terraform/: .terraform.lock.hcl  acm.tf  apprunner.tf  aurora.tf  cloudfront.tf  cloudwatch_logs.tf  ec2.tf  ecr.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  security_groups.tf  ssm.tf  supabase.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  user_data.sh
web/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/chore-manager-web/: package.json
web/src/: App.tsx
web/src/components/: BreadEntryCard.tsx  Layout.tsx
web/src/hooks/: useAuth.ts  useBreadEntries.ts
web/src/pages/: CreateEntry.tsx  Home.tsx  LearnMore.tsx  Login.tsx  MyEntries.tsx
web/src/services/: api.ts
web/src/types/: index.ts
