[project]
name = "breadnotes-api"
version = "0.1.0"
description = "Bread journaling application API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "mangum>=0.18.0",
    "python-multipart>=0.0.7",
    "boto3>=1.35.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]
